Tue Jan  8 18:39:23 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreedatalist.c (gtk_tree_data_list_compare_func): wow!
	Am I a moron or what 0 < 1 is not equivalent to strcmp ("a", "b")

Tue Jan  8 18:04:01 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktoolbar.c (gtk_toolbar_set_icon_size):
	Handle TOGGLE/RADIOBUTTON as well. (#68201,
	Damon Chaplin.)

	* gtk/gtktoolbar.c (get_first_child): Fix stupid 
	bug, just introduced.

Tue Jan  8 15:53:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_find_widget): Fix coordinate
	translations, once and for all.

	* gtk/gtktextbuffer.c (paste_from_buffer): Free
	the ClipboardRequest structure. (#66198, HideToshi
	Tajima)

2002-01-08  jacob berkman  <jacob@ximian.com>

	* gtk/gtklayout.c (gtk_layout_move_internal): queue a resize on
	the child rather than the layout. see bug #68263

Tue Jan  8 14:51:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkpaned.c (gtk_paned_expose): Don't draw
	the handle if we aren't showing both children.
	(#68135, Diego Gonzalez)

Tue Jan  8 14:45:43 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_add_events): Fix
	leak of result of gtk_container_get_children().

Tue Jan  8 14:42:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktoolbar.c: Fix leaks of results of
	gtk_container_get_children(). (#68199, Damon Chaplin)

Tue Jan  8 14:19:43 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcheckbutton.c (gtk_check_button_size_allocate): 
	Fix problem where child->requisition was accessed
	directly instead of calling get_child_requisition()
	(#68199, Damon Chaplin)

2001-01-08  James Henstridge  <james@daa.com.au>

	* gtk/gtkstyle.c: add trailing */ on doc comment.

Mon Jan  7 22:19:32 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (draw_with_pixmaps): Fix a
	problem where were the offset into the image was passed
	into convert_to_format() wrong.

	* gdk/x11/gdkdrawable-x11.c (gdk_x11_draw_pixbuf): Call